# Heart-Disease-Risk-Prediction-Using-CNN

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  __init__.py  cnn_heart_model_pytorch.pth  cnn_model.py  cnn_model_pytorch.py  download_data.py  eda.ipynb  evaluate.py  heart_disease.csv  preprocessing.py  pyproject.toml  requirements.txt  scaler.pkl  setup.py  streamlit_app.py  streamlit_app_final.py  streamlit_app_pytorch.py  train.py  train_pytorch.py  visualization.py
