[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heart-disease-cnn"
version = "1.0.0"
description = "CNN-based deep learning model for heart disease risk prediction"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = [
    "heart-disease",
    "deep-learning",
    "cnn",
    "pytorch",
    "tensorflow",
    "prediction",
    "healthcare",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.9.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "streamlit>=1.28.0",
    "joblib>=1.3.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "jupyter>=1.0.0",
    "ipython>=8.14.0",
    "black>=23.9.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
]

tensorflow = [
    "tensorflow>=2.13.0",
    "keras>=2.13.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/heart_disease_cnn"
Documentation = "https://github.com/yourusername/heart_disease_cnn#readme"
Repository = "https://github.com/yourusername/heart_disease_cnn.git"
Issues = "https://github.com/yourusername/heart_disease_cnn/issues"

[tool.setuptools]
packages = ["models", "utils", "app", "data"]

[tool.setuptools.package-data]
models = ["*.py", "*.pkl"]
utils = ["*.py"]
app = ["*.py"]
data = ["*.py", "*.csv"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --strict-markers"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
